Dodao osvježavanje podataka za natjecanja i projekte tako da se inicijalizira thread koji onda, ako ima promjena u bazi podataka, osvježava ekran.