@@ -6,9 +6,11 @@ import hr.java.project.projectfxapp.entities.Student;
 import hr.java.project.projectfxapp.entities.User;
 import hr.java.project.projectfxapp.enums.ApplicationScreen;
 import hr.java.project.projectfxapp.enums.Status;
+import hr.java.project.projectfxapp.threads.RefreshCompetitionsScreenThread;
 import hr.java.project.projectfxapp.utility.database.DatabaseUtil;
 import hr.java.project.projectfxapp.utility.manager.SessionManager;
 import hr.java.project.projectfxapp.utility.ValidationProtocol;
+import javafx.application.Platform;
 import javafx.beans.property.ReadOnlyStringWrapper;
 import javafx.beans.value.ObservableValue;
 import javafx.collections.FXCollections;
@@ -25,9 +27,11 @@ import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
 import java.util.Optional;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.stream.Collectors;
 
 public class CompetitionsUserController {
-
 
     @FXML
     private Label currentClubNameTextField;
@@ -67,17 +71,24 @@ public class CompetitionsUserController {
 
 
     public void initialize() {
+
         currentClubNameTextField.setText(SessionManager.getInstance().getCurrentClub().getName());
         List<Competition> competitionList = DatabaseUtil.getCompetitions();
 
         FilteredList<Competition> filteredCompetitions = getCompetitionsFilteredList(competitionList);
-        initializeCompetitionsTableView(filteredCompetitions);
 
         List<Competition> competitionsBeforeNow = competitionList.stream()
-                .filter(competition -> competition.getTimeOfCompetition().isBefore(LocalDateTime.now())).toList();
+                .filter(competition -> competition.getTimeOfCompetition().isBefore(LocalDateTime.now())).
+                collect(Collectors.toList());
 
+        initializeCompetitionsTableView(filteredCompetitions);
         initializeBarChart(competitionsBeforeNow);
         initializeLineChart(competitionsBeforeNow);
+
+
+        RefreshCompetitionsScreenThread.startThreadIfThreadNotPresent(numberOfParticipantsInCompetitionBarChart,
+                averageCompetitionScoreLineChart, competitionTableView);
+
 
     }
 
